fix: ratio covering inputs

--- a/frontend/assets/css/style.css
+++ b/frontend/assets/css/style.css
@@ -44,3 +44,11 @@ html {
     border-color: var(--bs-success);
     transition: cubic-bezier(0.175, 0.885, 0.32, 1.275) 0.3s;
 }
+
+.ratio {
+    position: static;
+}
+
+.ratio::before {
+    z-index: 0;
+}
